/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

2025-04-29 20:20 UTC-0300 Jose Quintas jmcquintas-gmail.com
   - samples/demoaltdpicker.prg
     ! removed, it was part of another
   * samples/demoget1.prg renamed from testget1.prg
     ! datepicker substitute visible on windows too
     ! Platform windows text at right of datepicker and substitute
     ! Removed monthcal dialog already on demomonthcal.prg
   * clean.sh
   * doc/hwgdoc_functions.html
   * samples/Readme.txt
   * samples/allhbp.hbp
   * samples/clean.sh
   * utils/designer/Readme.txt
   * utils/designer/files.txt
   * whatsnew.txt
     ! references to new names
   * demoall.hbp
   * demoall.prg
     ! Added demoget1 on pages "datepicker" and "radiobutton"

2025-04-29 16:00 UTC-0300 Jose Quintas jmcquintas-gmail.com
   * samples/demoall.prg
     ! moved dateselect and altdpicker to page "get"
     ! moved monthcal to page "others"
     ! removed page "date"
   * samples/demoimage1.prg
   * samples/demoimage2.prg
     ! variable oDlg for dialogs, from PUBLIC to LOCAL
   * samples/imageview.prg
   * source/winapi/drawwidg.prg
     ! win LoadImage() accept resize, ok for sendmessage() not for DrawIcon()
     ! DrawIconEx() can resize and can draw png
     ! Changed from hwg_DrawIcon() to hwg_DrawIconEx()
     ! Test imageview on W11, load ico and png and ok including resize
     ! These options was available only to GTK on sample

2025-04-29 14:30 UTC-0300 Jose Quintas jmcquintas-gmail.com
   - icons2.hbp
   * clean.sh
   * samples/Readme.txt
   * samples/allhbp.hbp
   * samples/clean.sh
   * samples/demoall.hbp
   * samples/demoall.prg
   * samples/demoimage1.prg renamed from demoico2.prg (icon.prg)